--- a/src/css/component/tooltip/card-tooltip.component.scss
+++ b/src/css/component/tooltip/card-tooltip.component.scss
@@ -1,7 +1,6 @@
 .card-tooltip {
 	display: flex;
 	flex-direction: column;
-	margin-top: -6vh;
 
 	img {
 		width: 256px;
